--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'HT'
 - !lcsh 'Antislavery movements -- Puerto Rico'
+- GITenberg
 title: La Experiencia Abolicionista de Puerto Rico
 url: http://www.gutenberg.org/ebooks/43493
